--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,21 @@
 name = "SimulationBasedCalibration"
 uuid = "84405b40-1b58-4881-906f-8add004fb729"
 authors = ["Kiante Fernandez"]
-version = "1.0.0-DEV"
+version = "0.1.0"
+
+[deps]
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [compat]
-julia = "1.6.7"
+julia = "1.6"
+Distributions = "0.25"
+DataFrames = "1.3"
+StatsBase = "0.33"
+Plots = "1.29"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
