--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 *.jl.mem
 /docs/Manifest*.toml
 /docs/build/
+Manifest.toml
+docs/build/
+.lh
+Manifest.toml
+/temp
+/benchmark/*.json
+/benchmark/*.md
