--- a/Project.toml
+++ b/Project.toml
@@ -17,7 +17,7 @@ DataFrames = "1.3"
 Distributions = "0.25"
 MCMCChains = "6.0.7"
 Plots = "1.29"
-StatsBase = "0.33"
+StatsBase = "0.33, 0.34"
 Turing = "0.37.0"
 julia = "1.6"
 
