--- a/Project.toml
+++ b/Project.toml
@@ -18,7 +18,7 @@ Distributions = "0.25"
 MCMCChains = "6.0.7"
 Plots = "1.29"
 StatsBase = "0.33, 0.34"
-Turing = "0.37.0"
+Turing = "0.37.0, 0.38"
 julia = "1.6"
 
 [extras]
